linked item to detailed item view by item id and fixed item card alignment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
 
 :root {
-   --bs-warning: #fca311;
+  --bs-warning: #fca311;
   --bs-white: #fff;
   --bs-gray: #292929;
   --bs-light: #e5e5e5;
   --bs-dark: #000000;
+  --bs-danger: #d2042d;
 
   --bs-primary: #292929;
   --bs-secondary: rgb(229, 229, 229);
@@ -14,6 +15,7 @@
   --bs-secondary-rgb: 229, 229, 229;
 
   --bs-warning-rgb: 252, 163, 17;
+  --bs-danger-rgb: 210, 4, 45;
   --bs-white-rgb: 255, 243, 235;
   --bs-light-rgb: 229, 229, 229;
   --bs-dark-rgb: 0, 0, 0;
@@ -278,3 +280,7 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.card-body {
+  flex: 0 1 auto;
+  padding: 1rem 1rem;
+}
